# triangles

./: CMakeLists.txt  README.md  main.cpp
debug/: debug.hpp
geometry/: geometry.cpp  geometry.hpp  line.hpp  plane.hpp  point.hpp  triangle.hpp  triangle_point_distance.hpp  vector.hpp
include/: compare.hpp  octree.hpp  std_vector.hpp  triangles.hpp  ui.hpp  utils.hpp
include/geometry/: geometry.hpp  line.hpp  plane.hpp  point.hpp  triangle.hpp  triangle_point_distance.hpp  vector.hpp
include/octree/: node.hpp  tree.hpp  utils.hpp
src/: geometry.cpp  octree.cpp  triangles.cpp  ui.cpp
tests/: CMakeLists.txt
tests/e2e/: test.py
tests/unitests/: config.hpp  intersection.cpp  intersection.hpp  intersections_octree.cpp  line.cpp  line.hpp  main.cpp  plane.cpp  point.cpp  point.hpp  point_in_triangle.cpp  point_in_triangle.hpp  triangle.cpp  triangle.hpp  vector.cpp  vector.hpp
utils/: compare.cpp
